# ai_learnings

./: .gitignore  README.md
scrapper/: .python-version  README.md  pyproject.toml  requirements.txt
scrapper/app/: __init__.py  main.py  model.py  utils.py
scrapper/templates/: index.html
